@@ -1,5 +1,22 @@
 --- openjdk.old/jdk/make/common/shared/Defs.gmk	2007-09-13 03:52:42.000000000 -0400
 +++ openjdk/jdk/make/common/shared/Defs.gmk	2007-09-18 16:24:59.000000000 -0400
+@@ -194,13 +194,13 @@
+ 
+ # Default names
+ LAUNCHER_NAME = java
+-PRODUCT_NAME = Java(TM)
++PRODUCT_NAME = IcedTea
+ PRODUCT_SUFFIX = SE Runtime Environment
+ COMPANY_NAME = Sun Microsystems, Inc.
+ 
+ ifdef OPENJDK
+-  LAUNCHER_NAME = openjdk
+-  PRODUCT_NAME = OpenJDK
++  LAUNCHER_NAME = java
++  PRODUCT_NAME = IcedTea
+   PRODUCT_SUFFIX = Runtime Environment
+   COMPANY_NAME =
+ endif
 @@ -258,12 +258,7 @@
  JDK_UNDERSCORE_VERSION =  $(subst .,_,$(JDK_VERSION))
  JDK_MKTG_UNDERSCORE_VERSION =  $(subst .,_,$(JDK_MKTG_VERSION))
