@@ -1,3 +1,7 @@
+2008-03-20  Lillian Angel  <langel@redhat.com>
+
+	* patches/icedtea-version.patch: Added patch to fix launcher name.
+
 2008-03-17  Lillian Angel  <langel@redhat.com>
 
 	* patches/icedtea-version.patch: Removed patches that changed OpenJDK
